solving form error

--- a/index.html
+++ b/index.html
@@ -582,7 +582,7 @@
 			<div class="call-back-form-one section-spacing">
 				<div class="container">
 					<div class="theme-title-one text-center">
-						<h2 class="title">Request a Call  Back</h2>
+						<h2 class="title"> Call  Back</h2>
 					</div> <!-- /.theme-title-one -->
 					<form id="contactForm"> <!-- Updated id to match the script -->
 						<div class="row">
@@ -888,7 +888,7 @@
 			};
 
 			$.ajax({
-			url: 'https://script.google.com/macros/s/AKfycbyPSOgRtf0lr_fd9a4fjmfVmJC4qySzaagFNdXEh6Pq2wvnA0ww9TTJuw8nZ07JaTSU/exec', // Replace with your deployed URL
+			url: 'https://script.google.com/macros/s/AKfycbxPTRPYaMpGOH5Tbk7mA0249wo9umX2fXhKetqFF54VUCx_ykN_sONUE0Ogs0dFCAxr/exec', // Replace with your deployed URL
 			method: 'POST',
 			contentType: 'application/json',
 			data: JSON.stringify(data),
